[gd_scene load_steps=6 format=3 uid="uid://c3dplayer3d001"]

[ext_resource type="Script" path="res://src/player3d/Player3D.gd" id="1_player3d"]
[ext_resource type="Script" path="res://src/player3d/PlayerInput3D.gd" id="2_playerinput3d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_001"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_001"]
radius = 0.4
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_001"]
albedo_color = Color(0.2, 0.6, 1.0, 1.0)

[node name="Player3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
script = ExtResource("1_player3d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_001")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_001")
surface_material_override/0 = SubResource("StandardMaterial3D_001")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 75.0

[node name="InteractionRay" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 1

[node name="PlayerInput3D" type="Node" parent="."]
script = ExtResource("2_playerinput3d")
